# Chess

./: CMakeLists.txt  chatgpt_move.py  main.cpp  movement_tests.cpp
